--- a/mnist_fully_connected.ipynb
+++ b/mnist_fully_connected.ipynb
@@ -460,13 +460,13 @@
     "print(\"x_dev: {}, y_dev: {}\".format(x_dev.shape, y_dev.shape))\n",
     "\n",
     "dftest = pd.read_csv(test_file)\n",
-    "x_test = dftest.values\n",
+    "x_test = normalize(dftest.values)\n",
     "print(\"x_test: {}\".format(x_test.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -497,13 +497,13 @@
      "text": [
       "Train on 39900 samples, validate on 2100 samples\n",
       "Epoch 1/3\n",
-      "39900/39900 [==============================] - 23s 571us/step - loss: 0.1851 - acc: 0.9427 - val_loss: 0.1213 - val_acc: 0.9600\n",
+      "39900/39900 [==============================] - 25s 618us/step - loss: 0.1852 - acc: 0.9438 - val_loss: 0.1480 - val_acc: 0.9557\n",
       "Epoch 2/3\n",
-      "39900/39900 [==============================] - 20s 490us/step - loss: 0.0714 - acc: 0.9780 - val_loss: 0.0931 - val_acc: 0.9729\n",
+      "39900/39900 [==============================] - 20s 513us/step - loss: 0.0718 - acc: 0.9775 - val_loss: 0.0992 - val_acc: 0.9738\n",
       "Epoch 3/3\n",
-      "39900/39900 [==============================] - 19s 476us/step - loss: 0.0490 - acc: 0.9839 - val_loss: 0.1015 - val_acc: 0.9714\n",
-      "Test loss: 0.1014528844283805\n",
-      "Test accuracy: 0.9714285714285714\n"
+      "39900/39900 [==============================] - 24s 596us/step - loss: 0.0480 - acc: 0.9850 - val_loss: 0.1057 - val_acc: 0.9724\n",
+      "Test loss: 0.10568567168677137\n",
+      "Test accuracy: 0.9723809522674197\n"
      ]
     }
    ],
